force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <description>product Warranty details</description>
    <label>Warranty</label>
    <nameField>
        <displayFormat>Item No - {0000}</displayFormat>
        <label>Warranty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>