force-app/main/default/objects/Warranty__c/fields/Appliance__c.field-meta.xml
<CustomField>
    <fullName>Appliance__c</fullName>
    <description>Appliance</description>
    <inlineHelpText>Appliance</inlineHelpText>
    <label>Appliance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appliance_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Smartch Watch</fullName>
            </value>
            <value>
                <fullName>Headphones</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Wishing Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>