force-app/main/default/objects/Warranty__c/fields/Appliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Type__c</fullName>
    <description>Appliance Type</description>
    <inlineHelpText>Appliance Type</inlineHelpText>
    <label>Appliance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>