force-app/main/default/objects/Warranty__c/fields/Customer_contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_contact__c</fullName>
    <description>Customer contact</description>
    <label>Customer contact</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>