force-app/main/default/objects/Warranty__c/fields/Extended_warranty__c.field-meta.xml
<CustomField>
    <fullName>Extended_warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Extended warranty</description>
    <inlineHelpText>Extended warranty</inlineHelpText>
    <label>Extended warranty</label>
    <type>Checkbox</type>
</CustomField>