force-app/main/default/objects/Warranty__c/fields/No_of_year_s__c.field-meta.xml
<CustomField>
    <fullName>No_of_year_s__c</fullName>
    <description>1 year, 2 years, 3 years, 5 years</description>
    <inlineHelpText>1 year, 2 years, 3 years, 5 years</inlineHelpText>
    <label>No of year&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Extended_warranty__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
                <default>true</default>
                <label>1 year</label>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>